--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  background-color: #87cefa;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
@@ -13,22 +14,14 @@ body {
 textarea {
   background: transparent;
   border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
+  width: 100%;
+  height: 100px;
+  background-color: #f8f8f8;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
   padding: 10px;
-}
-
-.jumbotron {
-  text-align: center;
-  background-color: transparent;
-  color: black;
-  border-radius: 0;
-  
-}
-
-.description {
-  white-space: pre-wrap;
+  resize: none;
+  outline: none;
 }
 
 .time-block {
@@ -36,12 +29,23 @@ textarea {
   border-radius: 15px;
 }
 
-.row {
+
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+}
+
+.description {
+  white-space: pre-wrap;
+}
+
+/* .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
-  ;
-}
+} */
 
 .hour {
   background-color: #ffffff;
@@ -76,4 +80,3 @@ textarea {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
-
